...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="go_to_map">Go to Map</string>
    <string name="gold_in_bank">Gold in bank</string>
    <string name="dolr">DOLR</string>
    <string name="peny">PENY</string>
    <string name="shil">SHIL</string>
    <string name="quid">QUID</string>
...
